Ensure plugins are checkout.